<resources>
    <string name="app_name">DoorBell</string>
    <string name="connection_connected_to">Connected to</string>
    <string name="connection_disconnected_from">Disconnected from</string>
    <string name="connection_unknown_status">Unknown</string>
    <string name="connection_connecting_to">Connecting to</string>
    <string name="connection_disconnecting_from">Disconnecting from</string>
    <string name="connection_error_connecting_to">Error connecting to</string>
    <string name="timestamp">&lt;br/&gt; &lt;small&gt; %1$s &lt;/small&gt;</string>
    <string name="notifyTitle">MQTT Message Received</string>
    <string name="notification">%1$s has received %2$s on topic %3$s</string>

    <string name="toast_pub_success">Published message: %1$s to topic: %2$s</string>
    <string name="toast_sub_success">Subscribed to %1$s</string>
    <string name="toast_disconnected">Disconnected</string>
    <string name="toast_pub_failed">Failed to publish message: %1$s to topic: %2$s</string>
    <string name="toast_sub_failed">Failed to subscribe to %1$s</string>

    <string name="connection_lost">%1$s has lost connection to %2$s</string>
    <string name="notifyTitle_connectionLost">MQTT Client Has Lost Connection</string>
    <string name="messageRecieved">Received message %1$s &lt;br/&gt; &lt;small&gt;Topic: %2$s &lt;/small&gt; </string>
    <string name="ring_title">Door rings</string>
    <string name="ok_btn">OK</string>
    <string name="channel_name">door_bell</string>
    <string name="channel_description">Door Bell Channel</string>
    <string name="today">Today</string>
    <string name="hour_format">h</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="general_settings_header">General</string>
    <string name="sync_header">Sync</string>
    <string name="settings_enable_sync">Enable Sync</string>
    <string name="settings_silent_mode">Silent Mode</string>
    <string name="settings_max_entries">Max Entries</string>
    <string name="settings_bell_duration">Bell Duration (sec)</string>

</resources>