<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/general_settings_header">

        <EditTextPreference
            app:key="settings_mqtt_host"
            app:title="MQTT Host"
            android:inputType="textUri"
            android:singleLine="true"
            android:defaultValue="rpi-server.fritz.box"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="settings_rest_host"
            app:title="REST Host"
            android:inputType="textUri"
            android:singleLine="true"
            android:defaultValue="rpi-server.fritz.box"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:digits="0123456789"
            android:inputType="numberDecimal"
            app:key="settings_rest_port"
            app:title="REST Port"
            android:singleLine="true"
            android:defaultValue="9090"
            app:useSimpleSummaryProvider="true" />

        <!--
        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />
            -->

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreference
            android:key="settings_enable_sync"
            android:defaultValue="true"
            android:title="@string/settings_enable_sync" />

        <SwitchPreference
            android:key="settings_silent_mode"
            android:defaultValue="false"
            android:title="@string/settings_silent_mode" />

        <EditTextPreference
            android:key="settings_max_entries"
            android:defaultValue="50"
            app:useSimpleSummaryProvider="true"
            android:singleLine="true"
            android:title="@string/settings_max_entries" />
        <EditTextPreference
            android:defaultValue="20"
            android:key="settings_bell_duration"
            android:selectAllOnFocus="true"
            android:inputType="numberDecimal"
            app:useSimpleSummaryProvider="true"
            android:singleLine="true"
            android:title="@string/settings_bell_duration" />

    </PreferenceCategory>

</PreferenceScreen>